# spot2cell

./: Dockerfile  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  python-package-linux-mac.yml  python-package-windows.yml
spot2cell/: __init__.py  __main__.py  assign_spots2cells.py  logger.py  spot2cell.py
spot2cell/scripts/: assign_spots2cells.py  spots2cells.py
tests/: __init__.py  test_spot2cell.py
