[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["spot2cell"]

[project]
name = "spot2cell"
version = "0.0.1"
authors = [{ name="Miguel A. Ibarra-Arellano", email="c180l058j@mozmail.com"},]
license = {text = "AGPL-3.0-or-later"}
description = "From a X,Y list of detected spots, assigns each spot to a cell based on a segmentation mask"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3"
]
dependencies = [
    "numpy",
    "tiffile"
]
keywords = [
    "cell",
    "mask",
    "spots",
    "FISH",
    "Xenium"
]

[project.scripts]
spots2cells = "spot2cell.scripts.spots2cells:main"

[project.urls]
Repository = "https://github.com/SchapiroLabor/spot2cell"
Homepage = "https://github.com/SchapiroLabor/spot2cell"
Issues = "https://github.com/SchapiroLabor/spot2cell/issues"


